2009-02-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c (LOAD_URL_METHOD): Use open_new_window
	D-Bus method. Fixes: NB#97193

	* configure.ac: 0.3.10

	* debian/changelog: Update.

2009-02-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.9
	* configure.ac: 0.3.9

2009-02-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (group_update): Fix crash.

2009-02-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.8
	* configure.ac: 0.3.8

2009-02-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update.

2009-02-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (NOTIFICATION_GROUP_KEY_EMPTY_SUMMARY,
	  NOTIFICATION_GROUP_KEY_PREVIEW_SUMMARY, empty_summary,
	  preview_summary, group_free, group_update,
	  hd_incoming_events_notified, load_notification_groups): Add handling
	  of preview summary and empty summary strings for notification
	  display. Fixes NB#99742, NB#97906

	* src/notification-groups.conf: Add some more key/values for empty
	summary and preview summary.

	* debian/changelog: Update.

2009-02-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixed some memory leaks.

	* src/hd-applet-manager.c (items_configuration_loaded_cb): Free
	plugins (NULL-terminated array of strings).

	* src/hd-notification-manager.c (hd_notification_manager_finalize):
	  Free notifications hashtable.
	  (hd_notification_manager_notify): Free sender.

	* src/hildon-home.c (signal_handler, main): Free notification manager.

	* src/test-notifications.py (emit_notification): Update.

2009-01-30  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hildon-home.c (load_operator_applet, main): Load the operator
	  applet if it is available.

	* debian/changelog: Update.

2009-01-30  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-event-window.c
	  (hd_incoming_event_window_set_property): Fix icon size.
