@@ -37,4 +37,9 @@ Preview-Summary=tana_fi_missed_call
 Empty-Summary=tana_fi_unknown_number
 Text-Domain=maemo-af-desktop
 
+[incoming-call]
+No-Window=true
+
+[alarm-event]
+No-Window=true
 
