@@ -1,6 +1,9 @@
 hildon-home (0.3.10~unreleased) unstable; urgency=low
 
   * Open bookmark shortcuts in new browser window. Fixes: NB#97193
+  * Add support for No-Window property in the notification groups
+    configuration file. Use that option for the incoming-call and alarm-event
+    category. Fixes: NB#98574
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed,  4 Feb 2009 15:02:37 +0100
 
